--- a/config/content.htm
+++ b/config/content.htm
@@ -65,7 +65,17 @@
 <p></p>
 <p></p>
 <p></p><h3>模擬</h3>
-<h2>stage3-ag3</h2>
+<p>solidworks</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kiXNu7hFYwM" width="560"></iframe></p>
+<p>coppeliasim</p>
+<p>first</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/xS-aKRmcTNk" width="560"></iframe></p>
+<p><span>second</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/k2_Pz1M6HIs" width="560"></iframe></p>
+<p><span>third</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/DIVLWp8kbvQ" width="560"></iframe></p>
+<p><span>fourth</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rZzBegFUFAk" width="560"></iframe></p><h2>stage3-ag3</h2>
 <h1>RoboDK</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OzVrltmZmNE" width="560"></iframe></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from robolink import *    # API to communicate with robodk
