--- a/content/模擬.html
+++ b/content/模擬.html
@@ -134,7 +134,17 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">零件-2 << <a href='零件-2.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3<br /><h1>模擬</h1>
-<br />零件-2 << <a href='零件-2.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3</div>
+<p>solidworks</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/kiXNu7hFYwM" width="560"></iframe></p>
+<p>coppeliasim</p>
+<p>first</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/xS-aKRmcTNk" width="560"></iframe></p>
+<p><span>second</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/k2_Pz1M6HIs" width="560"></iframe></p>
+<p><span>third</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/DIVLWp8kbvQ" width="560"></iframe></p>
+<p><span>fourth</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rZzBegFUFAk" width="560"></iframe></p><br />零件-2 << <a href='零件-2.html'>Previous</a> <a href='stage3-ag3.html'>Next</a> >> stage3-ag3</div>
         
     <!-- footer -->
       <div class="container">
