--- a/config/content.htm
+++ b/config/content.htm
@@ -76,7 +76,10 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/DIVLWp8kbvQ" width="560"></iframe></p>
 <p><span>fourth</span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rZzBegFUFAk" width="560"></iframe></p><h2>stage3-ag3</h2>
-<h1>RoboDK</h1>
+<h3>主題3</h3>
+<p>參考網址:<a href="https://weheartit.com/entry/301240914">https://weheartit.com/entry/301240914</a></p>
+<p><img alt="" height="500" src="/images/original.gif" width="500"/></p>
+<p></p><h1>RoboDK</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OzVrltmZmNE" width="560"></iframe></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from robolink import *    # API to communicate with robodk
 from robodk import *      # robodk robotics toolbox
