--- a/content/主題3.html
+++ b/content/主題3.html
@@ -133,8 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">模擬 << <a href='模擬.html'>Previous</a> <a href='主題3.html'>Next</a> >> 主題3<br /><h1>stage3-ag3</h1>
-<br />模擬 << <a href='模擬.html'>Previous</a> <a href='主題3.html'>Next</a> >> 主題3</div>
+    <div id="tipue_search_content">stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <a href='RoboDK.html'>Next</a> >> RoboDK<br /><h1>主題3</h1>
+<p>參考網址:<a href="https://weheartit.com/entry/301240914">https://weheartit.com/entry/301240914</a></p>
+<p><img alt="" height="500" src="./../images/original.gif" width="500"/></p>
+<p></p><br />stage3-ag3 << <a href='stage3-ag3.html'>Previous</a> <a href='RoboDK.html'>Next</a> >> RoboDK</div>
         
     <!-- footer -->
       <div class="container">
