--- a/content/stage3-ag3.html
+++ b/content/stage3-ag3.html
@@ -134,12 +134,15 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">模擬 << <a href='模擬.html'>Previous</a> <a href='RoboDK.html'>Next</a> >> RoboDK<br /><h1>stage3-ag3</h1>
+<p><span>擺線針輪機構</span></p>
 <p>參考主題:<a href="https://weheartit.com/entry/301240914">https://weheartit.com/entry/301240914</a></p>
 <p><img alt="" height="500" src="./../images/original.gif" width="500"/></p>
 <p><a href="https://drive.google.com/drive/folders/11oNzE1GaPxS3OLqcCfzpDuS6n7zjgqzq?usp=sharing">圖檔位置</a></p>
 <p><img alt="" height="516" src="./../images/messageImage_1623905141107.jpg" width="500"/></p>
+<p><img alt="" height="414" src="./../images/1.jpg" width="500"/></p>
 <p></p>
-<p></p><br />模擬 << <a href='模擬.html'>Previous</a> <a href='RoboDK.html'>Next</a> >> RoboDK</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Lk_e-aizsIs" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/V1mKZUwJUEE" width="560"></iframe><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/VzQ5IcZusGM" width="560"></iframe></p><br />模擬 << <a href='模擬.html'>Previous</a> <a href='RoboDK.html'>Next</a> >> RoboDK</div>
         
     <!-- footer -->
       <div class="container">
