--- a/config/content.htm
+++ b/config/content.htm
@@ -9,8 +9,7 @@
 <p>討論小組主題</p>
 <p><span>stage1-ag8 機械手臂</span><br/><span>動機:爸爸搬重物很辛苦，希望他可以減輕負擔</span><br/><span>第二周:繪製零件圖</span><br/><span>第三周:進行coppeliasim模擬</span><br/><span>第四周:報告</span></p>
 <p><span>參考圖片</span></p>
-<p><span><img alt="" height="201" src="/images/1.jpg" width="346"/></span></p>
-<h3>零件</h3>
+<p><span><img caption="false" height="191" src="/images/下載.jpg" width="330"/></span></p><h3>零件</h3>
 <p>組合件(<a href="https://drive.google.com/drive/folders/1pxO63j_fL6_8JmQw5cWYNjr5g_EWPiDW?usp=sharing">零件檔</a>、<a href="https://drive.google.com/drive/folders/16jtkQZWVNSEkSj2PwDPdUDCwZb9NJ792?usp=sharing">stl</a>)</p>
 <p><img alt="" height="259" src="/images/組合.png" width="310"/></p>
 <p>夾爪x2</p>
